# Problem-Tree-Search

./: Cargo.toml  LICENSE
src/: data_structures.rs  lib.rs  traits.rs
src/data_structures/: queue.rs
src/search/: astar.rs  bfs.rs  dfs.rs
src/tests/: mod.rs  simple_tree.rs  tree.rs
